# python-blank-project

./: Dockerfile  README.md  pyproject.toml  rename.sh  tasks.py
.github/workflows/: python-app.yml
