[tool.poetry]
name = "blank-project"
version = "0.1.0"
description = ""
authors = ["gortyy"]
readme = "README.md"
packages = [{include = "blank_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
black = "^22.12.0"
pytest = "^7.2.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
invoke = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
